@@ -29,10 +29,6 @@
 #define SIGFRAME_REGSAVE_OFF	(SIGFRAME_BASE + 3 * 4)
 #define SIGFRAME_FPREGSAVE_OFF	(SIGFRAME_BASE + 3 * 4 + 32 * 4 + 4)
 
-/* The signal handler trampoline is called _sigtramp.  */
-#undef DEPRECATED_IN_SIGTRAMP
-#define DEPRECATED_IN_SIGTRAMP(pc, name) ((name) && DEPRECATED_STREQ ("_sigtramp", name))
-
 /* Irix 5 saves a full 64 bits for each register.  We skip 2 * 4 to
    get to the saved PC (the register mask and status register are both
    32 bits) and then another 4 to get to the lower 32 bits.  We skip
