@@ -22,10 +22,6 @@
 #include "mips/tm-mips.h"
 #include "solib.h"
 
-/* The signal handler trampoline is called _sigtramp.  */
-#undef DEPRECATED_IN_SIGTRAMP
-#define DEPRECATED_IN_SIGTRAMP(pc, name) ((name) && DEPRECATED_STREQ ("_sigtramp", name))
-
 /* Offsets for register values in _sigtramp frame.
    sigcontext is immediately above the _sigtramp frame on Irix.  */
 #undef SIGFRAME_BASE
