@@ -1,5 +1,11 @@
 2004-04-30  Andrew Cagney  <cagney@redhat.com>
 
+	* config/mips/tm-linux.h (DEPRECATED_IN_SIGTRAMP): Delete.
+	* config/mips/tm-irix6.h (DEPRECATED_IN_SIGTRAMP): Delete.
+	* config/mips/tm-nbsd.h: Delete undef DEPRECATED_IN_SIGTRAMP.
+	* config/mips/tm-irix5.h (DEPRECATED_IN_SIGTRAMP): Delete.
+	* config/arm/tm-embed.h (DEPRECATED_IN_SIGTRAMP): Delete.
+
 	* defs.h (deprecated_inside_entry_file): Delete declaration.
 	* blockframe.c (deprecated_inside_entry_file): Delete function.
 	(legacy_frame_chain_valid): Delete call.
